--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,9 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^3.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "typescript": "^4.9.3",
     "vite": "^4.5.5"
   }
